tests/snapshots/errors/unclosed_brace.mc
fun test() {
    print($"{1}");
